--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@mapbox/togeojson": "^0.16.2",
     "cors": "^2.8.5",
