--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,14 @@
   "type": "module",
   "dependencies": {
     "@mapbox/togeojson": "^0.16.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
+    "path": "^0.12.7",
     "pg": "^8.17.0",
     "xmldom": "^0.6.0"
   }
